<resources>
    <string name="app_name">TestTask PS</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="loading">Loading…</string>
    <string name="ooops">Ooops</string>
    <string name="ok">OK</string>
    <string name="received">Received from {item}</string>
    <string name="sent">Sent to {item}</string>
    <string name="failed">Failed sent to {item}</string>
    <string name="transactions">Transactions</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="insufficientDescription">Transaction: {amount}\nFee: {fee}\nBalance: {balance}</string>
    <string name="insufficientFunds">Insufficient funds</string>
    <string name="feeText">Fee: {fee}</string>
    <string name="select_exchange_currency">Select exchange currency:</string>
    <string name="amount_to_exchange">Amount to exchange</string>
    <string name="transfer">Transfer</string>
    <string name="transferAccount">Transfer {account}</string>
    <string name="fieldNotEmty">Field must be not empty</string>
    <string name="totalWithFee">Total with fee: {amount}</string>
    <string name="amount_to_receive">Amount to receive: {amount} {account}</string>
</resources>