<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        android:layout_marginHorizontal="36dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/ooops"
                android:fontFamily="@font/nexa_bold"
                android:textColor="@color/colorTextContrast"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/something_went_wrong"
                android:fontFamily="@font/nexa_light"
                android:textColor="@color/colorTextContrast"
                android:gravity="center"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/textOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="6dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:text="@string/ok"
                android:background="@drawable/background_black_border"
                android:fontFamily="@font/nexa_bold"
                android:textColor="@color/colorTextContrast"
                android:gravity="center"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/imageRefresh"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:rotation="90"
                android:layout_marginTop="24dp"
                android:src="@drawable/icon_refresh"
                android:scaleType="fitCenter"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>